[package]
name = "async-tls"
version = "0.5.0"
authors = ["The async-rs developers", "Florian Gilcher <florian.gilcher@ferrous-systems.com>", "dignifiedquire <dignifiedquire@gmail.com>", "quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/async-std/async-tls"
homepage = "https://github.com/async-std/async-tls"
documentation = "https://docs.rs/async-tls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "async-std/async-tls" }
appveyor = { repository = "async-std/async-tls" }

[dependencies]
futures-preview = "0.3.0-alpha.19"
rustls = "0.16"
webpki = "0.21"
webpki-roots = "0.17"

[features]
early-data = []

[dev-dependencies]
lazy_static = "1"
async-std = "0.99"
