[package]
name = "async-tls"
version = "0.8.0"
authors = ["The async-rs developers", "Florian Gilcher <florian.gilcher@ferrous-systems.com>", "dignifiedquire <dignifiedquire@gmail.com>", "quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/async-std/async-tls"
homepage = "https://github.com/async-std/async-tls"
documentation = "https://docs.rs/async-tls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "async-std/async-tls" }
appveyor = { repository = "async-std/async-tls" }

[dependencies]
futures = "0.3.4"
rustls = "0.18.0"
webpki = { version = "0.21.2", optional = true }
webpki-roots = { version = "0.19.0", optional = true }

[features]
default = ["client", "server"]
client = ["webpki", "webpki-roots"]
early-data = []
server = []

[dev-dependencies]
lazy_static = "1"
futures-util = "0.3"
async-std = { version = "1.0", features = ["unstable"] }

[[test]]
name = "test"
required-features = ["client", "server"]

[[test]]
name = "google"
required-features = ["client"]
